Working on new Circuit interface.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Q is Quantum JavaScript</title>
+		<title>Q.js is Quantum JavaScript</title>
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
 		<meta name="description"          content="Quantum computing in your browser.">
@@ -26,12 +26,12 @@
 		<meta name="twitter:card"         content="summary_large_image">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
-		<meta name="twitter:title"        content="Q is Quantum JavaScript">
+		<meta name="twitter:title"        content="Q.js is Quantum JavaScript">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
 		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
-		<meta property="og:title"         content="Q is Quantum JavaScript">
+		<meta property="og:title"         content="Q.js is Quantum JavaScript">
 		<meta property="og:description"   content="Quantum computing in your browser.">
 		<meta property="og:image"         content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		<meta property="og:url"           content="https://stewdio.github.io/q.js/">
@@ -89,9 +89,9 @@
 				and port them over to other quantum suites.
 				Q’s source code—including this documentation—is 
 				available for download from GitHub at
-				<a class="url" href="https://github.com/stewdio/q.js" target="_blank">https://github.com/stewdio/q.js</a>
+				<a href="https://github.com/stewdio/q.js" target="_blank">https://github.com/stewdio/q.js</a>
 				and this documentation website is live at
-				<a class="url" href="https://stewdio.github.io/q.js">https://stewdio.github.io/q.js</a>
+				<a href="https://stewdio.github.io/q.js">https://stewdio.github.io/q.js</a>
 			</p>
 			<h3>Open your JavaScript console</h3>
 			<p>
