New editor in progress.

--- a/other/-dev-2.html
+++ b/other/-dev-2.html
@@ -93,11 +93,11 @@ I-I-I---I-I</textarea>
 
 
 <div class="Q-circuit-palette">
-	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-hadamard">H</div>
-	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x">X</div>
-	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-y">Y</div>
-	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-z">Z</div>
-	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-phase">S</div>
+	<div class="Q-circuit-operation Q-circuit-operation-hadamard"><div class="Q-circuit-operation-tile">H</div></div>
+	<div class="Q-circuit-operation Q-circuit-operation-pauli-x"><div class="Q-circuit-operation-tile">X</div></div>
+	<div class="Q-circuit-operation Q-circuit-operation-pauli-y"><div class="Q-circuit-operation-tile">Y</div></div>
+	<div class="Q-circuit-operation Q-circuit-operation-pauli-z"><div class="Q-circuit-operation-tile">Z</div></div>
+	<div class="Q-circuit-operation Q-circuit-operation-phase"><div class="Q-circuit-operation-tile">S</div></div>
 </div>
 <br>
 <div class="Q-circuit" id="my-sample-circuit">
@@ -112,28 +112,28 @@ I-I-I---I-I</textarea>
 			</div>
 			<div class="Q-circuit-board-foreground">
 				
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-selectall">&searr;</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-input-header"></div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-label" style="grid-column: 3" title="Moment 1">1</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-label" style="grid-column: 4" title="Moment 2">2</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-label" style="grid-column: 5" title="Moment 3">3</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-label" style="grid-column: 6" title="Moment 4">4</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-add" style="grid-column: 7">+</div>
+				<div class="Q-circuit-header Q-circuit-selectall">&searr;</div>
+				<div class="Q-circuit-header Q-circuit-input-header"></div>
+				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 3" title="Moment 1">1</div>
+				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 4" title="Moment 2">2</div>
+				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 5" title="Moment 3">3</div>
+				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 6" title="Moment 4">4</div>
+				<div class="Q-circuit-header Q-circuit-moment-add" style="grid-column: 7">+</div>
 				
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-label" style="grid-row: 2" title="Register 1">1</div>
-				<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 2">0</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-label" style="grid-row: 3" title="Register 2">2</div>
-				<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 3">0</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-label" style="grid-row: 4" title="Register 3">3</div>
-				<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 4">0</div>
-				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-add" style="grid-row: 5">+</div>
+				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 2" title="Register 1">1</div>
+				<div class="Q-circuit-input" style="grid-row: 2">0</div>
+				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 3" title="Register 2">2</div>
+				<div class="Q-circuit-input" style="grid-row: 3">0</div>
+				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 4" title="Register 3">3</div>
+				<div class="Q-circuit-input" style="grid-row: 4">0</div>
+				<div class="Q-circuit-header Q-circuit-register-add" style="grid-row: 5">+</div>
 
-				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-hadamard" style="grid-column: 3; grid-row: 2">H</div>
-				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-control" style="grid-column: 4; grid-row: 2">.</div>
-				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-target" style="grid-column: 4; grid-row: 3">X</div>
-				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 2">X</div>
-				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 3">X</div>
-				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-phase" style="grid-column: 6; grid-row: 4">S</div>
+				<div class="Q-circuit-operation Q-circuit-operation-hadamard" style="grid-column: 3; grid-row: 2"><div class="Q-circuit-operation-tile">H</div></div>
+				<div class="Q-circuit-operation Q-circuit-operation-control" style="grid-column: 4; grid-row: 2"><div class="Q-circuit-operation-tile">.</div></div>
+				<div class="Q-circuit-operation Q-circuit-operation-target" style="grid-column: 4; grid-row: 3"><div class="Q-circuit-operation-tile">X</div></div>
+				<div class="Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 2"><div class="Q-circuit-operation-tile">X</div></div>
+				<div class="Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 3"><div class="Q-circuit-operation-tile">X</div></div>
+				<div class="Q-circuit-operation Q-circuit-operation-phase" style="grid-column: 6; grid-row: 4"><div class="Q-circuit-operation-tile">S</div></div>
 			
 			</div>
 		</div>
@@ -141,6 +141,9 @@ I-I-I---I-I</textarea>
 	<div class="Q-circuit-toolbar">
 		<div class="Q-circuit-button Q-circuit-button-lock" title="Lock / unlock">
 			🔒
+		</div
+		><div class="Q-circuit-button Q-circuit-button-undo" title="Undo">
+			S
 		</div
 		><div class="Q-circuit-button Q-circuit-button-undo" title="Undo">
 			&larr;
