More circuit editor dev.

--- a/other/-dev-2.html
+++ b/other/-dev-2.html
@@ -142,7 +142,7 @@ I-I-I---I-I</textarea>
 		<div class="Q-circuit-button Q-circuit-button-lock" title="Lock / unlock">
 			🔒
 		</div
-		><div class="Q-circuit-button Q-circuit-button-undo" title="Undo">
+		><div class="Q-circuit-button Q-circuit-button-undo" title="Selection mode">
 			S
 		</div
 		><div class="Q-circuit-button Q-circuit-button-undo" title="Undo">
