--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
 		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<link rel="stylesheet" type="text/css" href="source/Q.css">
-		<link rel="stylesheet" type="text/css" href="source/Q-Circuit-Editor.css">
-		<link rel="stylesheet" type="text/css" href="other/documentation.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap">
+		<link rel="stylesheet" href="source/Q.css">
+		<link rel="stylesheet" href="source/Q-Circuit-Editor.css">
+		<link rel="stylesheet" href="other/documentation.css">
 
 		<script src="https://www.googletagmanager.com/gtag/js" async></script>
 		<script src="other/ga.js"></script>				
