Circuit editor MINIMALIST

--- a/-dev.html
+++ b/-dev.html
@@ -88,74 +88,9 @@ I-I-I---I-I</textarea>
 			
 
 
-<div id="tester"></div>
 
 
-<!--
 
-<br>
-<div class="Q-circuit" id="my-sample-circuit">
-	Accessible via 
-	<a href="index.html#Open_your_JavaScript_console" target="_blank">JavaScript console</a>
-	as “<code>my-sample-circuit</code>”
-	<br>
-	<div class="Q-circuit-toolbar">
-		<div class="Q-circuit-button Q-circuit-button-lock" title="Lock / unlock">
-			🔒
-		</div
-		><div class="Q-circuit-button Q-circuit-button-select-toggle" title="Selection mode">
-			S
-		</div
-		><div class="Q-circuit-button Q-circuit-button-undo" title="Undo">
-			&larr;
-		</div
-		><div class="Q-circuit-button Q-circuit-button-redo" title="Redo">
-			&rarr;
-		</div>
-	</div>
-	<div class="Q-circuit-board-container">
-		<div class="Q-circuit-board">
-			<div class="Q-circuit-board-background">
-
-			</div>
-			<div class="Q-circuit-board-foreground">
-
-				<div class="Q-circuit-input" style="grid-row: 2;">0</div>
-				<div class="Q-circuit-input" style="grid-row: 3;">0</div>
-				<div class="Q-circuit-input" style="grid-row: 4;">0</div>
-				<div class="Q-circuit-input" style="grid-row: 5;">0</div>
-				<div class="Q-circuit-input" style="grid-row: 6;">0</div>
-
-				<div class="Q-circuit-header Q-circuit-selectall" title="Select all">&searr;</div>
-				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 2;" title="Register 1">1</div>
-				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 3;" title="Register 2">2</div>
-				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 4;" title="Register 3">3</div>
-				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 5;" title="Register 4">4</div>
-				<div class="Q-circuit-header Q-circuit-register-label" style="grid-row: 6;" title="Register 5">5</div>
-				<div class="Q-circuit-header Q-circuit-register-add"   style="grid-row: 7;" title="Add register">+</div>
-
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 3;" title="Moment 1">1</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 4;" title="Moment 2">2</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 5;" title="Moment 3">3</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 6;" title="Moment 4">4</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 7;" title="Moment 5">5</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 8;" title="Moment 6">6</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 9;" title="Moment 7">7</div>
-				<div class="Q-circuit-header Q-circuit-moment-label" style="grid-column: 10;" title="Moment 8">8</div>
-				<div class="Q-circuit-header Q-circuit-moment-add"   style="grid-column: 11;" title="Add moment">+</div>
-				
-				<div class="Q-circuit-operation Q-circuit-operation-hadamard" style="grid-column: 3; grid-row: 2;"><div class="Q-circuit-operation-tile">H</div></div>
-				<div class="Q-circuit-operation Q-circuit-operation-control" style="grid-column: 4; grid-row: 2;"><div class="Q-circuit-operation-tile">.</div></div>
-				<div class="Q-circuit-operation Q-circuit-operation-target" style="grid-column: 4; grid-row: 3;"><div class="Q-circuit-operation-tile">X</div></div>
-				<div class="Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 2;"><div class="Q-circuit-operation-tile">X</div></div>
-				<div class="Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 3;"><div class="Q-circuit-operation-tile">X</div></div>
-				<div class="Q-circuit-operation Q-circuit-operation-phase" style="grid-column: 6; grid-row: 4;"><div class="Q-circuit-operation-tile">S</div></div>
-			
-			</div>
-		</div>
-	</div>
-</div>
--->
 
 <div class="Q-circuit-palette">
 	<div class="Q-circuit-operation Q-circuit-operation-hadamard"><div class="Q-circuit-operation-tile">H</div></div>
@@ -165,7 +100,8 @@ I-I-I---I-I</textarea>
 	<div class="Q-circuit-operation Q-circuit-operation-phase"><div class="Q-circuit-operation-tile">S</div></div>
 </div>
 
-
+<div id="tester"></div>
+<div id="tester2"></div>
 
 
 
@@ -279,16 +215,37 @@ H  X.1#1  Y    Z    S</code></pre>
 
 
 
-const
-tester = Q`
+const tester = Q`
 	H X#0 I I I I I
 	I X#1 S I I I M
 	Y Z   I S I I I
-	I I   X Y Z S H`,
-testerDom = tester.toDom( document.getElementById( 'tester' ))
+	I I   X Y Z S H`
+tester.name = 'tester'
+
+const testerDom = tester.toDom( document.getElementById( 'tester' ))
 
 // console.log( testerDom )
 //document.getElementById( 'tester' ).appendChild( testerDom )
+
+
+
+
+
+
+Q`
+
+	H X.0#0 Y Z S
+	H X.1#0 Y Z S
+	H X.0#1 Y Z S
+	H X.1#1 Y Z S
+
+`//.set( 'name', 'tester2' )
+ //.setName( 'tester2' )
+.toDom( document.getElementById( 'tester2' ))
+
+//.download( 'csv' )
+//.downloadCsv()
+//.downloadTsv()
 
 
 
