--- a/-dev.html
+++ b/-dev.html
@@ -89,17 +89,7 @@ I-I-I---I-I</textarea>
 
 
 
-
-
-
-<div class="Q-circuit-palette">
-	<div class="Q-circuit-operation Q-circuit-operation-hadamard"><div class="Q-circuit-operation-tile">H</div></div>
-	<div class="Q-circuit-operation Q-circuit-operation-pauli-x"><div class="Q-circuit-operation-tile">X</div></div>
-	<div class="Q-circuit-operation Q-circuit-operation-pauli-y"><div class="Q-circuit-operation-tile">Y</div></div>
-	<div class="Q-circuit-operation Q-circuit-operation-pauli-z"><div class="Q-circuit-operation-tile">Z</div></div>
-	<div class="Q-circuit-operation Q-circuit-operation-phase"><div class="Q-circuit-operation-tile">S</div></div>
-</div>
-
+<div id="palette-1"></div>
 <div id="tester"></div>
 <div id="tester2"></div>
 
@@ -222,7 +212,7 @@ const tester = Q`
 	I I   X Y Z S H`
 tester.name = 'tester'
 
-const testerDom = tester.toDom( document.getElementById( 'tester' ))
+const testerDom = tester.toDom( 'tester' )
 
 // console.log( testerDom )
 //document.getElementById( 'tester' ).appendChild( testerDom )
@@ -239,14 +229,16 @@ Q`
 	H X.0#1 Y Z S
 	H X.1#1 Y Z S
 
-`//.set( 'name', 'tester2' )
+`//.set( 'name', 'tester2' )// +++++++++ add this shit in!
  //.setName( 'tester2' )
-.toDom( document.getElementById( 'tester2' ))
+.toDom( 'tester2' )
 
 //.download( 'csv' )
 //.downloadCsv()
 //.downloadTsv()
 
+
+Q.Circuit.Editor.createPalette( 'palette-1' )
 
 
 
