Undo / Redo is solid.

--- a/-dev.html
+++ b/-dev.html
@@ -52,6 +52,7 @@
 		<script src="source/Q-Matrix.js"></script>
 		<script src="source/Q-Qubit.js"></script>
 		<script src="source/Q-Gate.js"></script>
+		<script src="source/Q-History.js"></script>
 		<script src="source/Q-Circuit.js"></script>
 		<script src="source/Q-Circuit-Editor-NEW.js"></script>
 		<script src="other/navigation.js"></script>
